cluster/apps/miniflux/sts-postgesql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: miniflux
    tier: database
  name: miniflux-postgresql
  namespace: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  serviceName: miniflux-postgresql
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: miniflux
        tier: database
      name: miniflux-postgresql
      namespace: miniflux
    spec:
      containers:      
      - name: miniflux-db
        image: postgres:15.2-alpine3.17
        imagePullPolicy: IfNotPresent      
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "miniflux" -d "miniflux" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 5432
          name: postgresql
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - -e
            - pg_isready -U "miniflux" -d "miniflux" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: "/data/"
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: miniflux
      serviceAccountName: miniflux
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: miniflux-db
      namespace: miniflux
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: nfs-client
      resources:
        requests:
          storage: 5Gi
