cluster/apps/miniflux/service-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app: miniflux
    tier: frontend
spec:
  selector:
    app: miniflux
    tier: frontend
    environment: production
  ports:
  - port: 8080
    targetPort: http
    name: http
    protocol: TCP
