cluster/apps/miniflux/service-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miniflux
    tier: database
  name: miniflux-postgresql
  namespace: miniflux
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: postgresql
  selector:
    app: miniflux
    tier: database
  sessionAffinity: None
  type: ClusterIP
